2023-09-16T16:10:27Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6208346713 # 1906
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-16
* notice: last 14d: unq all: 7 20
* notice: prev accum: outdated-unq outdated-all / unq all: 724 1344 / 738 1365
* notice: next accum: outdated-unq outdated-all / unq all: 725 1346 / 739 1366
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2023-09-02] / [2023-09-16]

2023-09-15T16:11:55Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6200358140 # 1903
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-15
* notice: last 14d: unq all: 7 21
* notice: prev accum: outdated-unq outdated-all / unq all: 723 1342 / 738 1365
* notice: next accum: outdated-unq outdated-all / unq all: 724 1344 / 738 1365
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-09-01] / []

2023-09-15T00:42:30Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6192439663 # 1901
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-15
* notice: last 14d: unq all: 7 22
* notice: prev accum: outdated-unq outdated-all / unq all: 719 1337 / 734 1359
* notice: next accum: outdated-unq outdated-all / unq all: 723 1342 / 738 1365
* notice: prev exec diff / last date diff / accum: unq all: +4 +6 -0 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2023-08-28 2023-08-29 2023-08-30 2023-08-31] / [2023-09-01 2023-09-09 2023-09-10 2023-09-13 2023-09-14]

2023-09-09T08:08:15Z: