@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-09-16T16:10:27Z",
-  "count_outdated" : 1346,
-  "uniques_outdated" : 725,
+  "timestamp" : "2023-09-17T16:10:25Z",
+  "count_outdated" : 1348,
+  "uniques_outdated" : 726,
   "count" : 1366,
   "uniques" : 739,
   "clones" : [
-    {
-      "timestamp": "2023-09-03T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-09-04T00:00:00Z",
       "count": 3,
