@@ -1,12 +1,7 @@
 {
-  "count": 20,
+  "count": 18,
   "uniques": 7,
   "clones": [
-    {
-      "timestamp": "2023-09-03T00:00:00Z",
-      "count": 2,
-      "uniques": 1
-    },
     {
       "timestamp": "2023-09-04T00:00:00Z",
       "count": 3,
